--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -2,8 +2,8 @@
 %=====================================================================================================================
 %matrix structures
 %=====================================================================================================================
-@article{vandebril_bibliography_2005,%TODO * in title
-	title = {A bibliography on semiseparable matrices*},
+@article{vandebril_bibliography_2005,
+	title = {A bibliography on semiseparable matrices},
 	volume = {42},
 	issn = {1126-5434},
 	doi = {10.1007/s10092-005-0107-z},
@@ -30,9 +30,11 @@
 	file = {Vandebril et al. - 2007 - Matrix Computations and Semiseparable Matrices Li.pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/N72WNGWM/Vandebril et al. - 2007 - Matrix Computations and Semiseparable Matrices Li.pdf:application/pdf},
 }
 
-@article{grasedyck_theorie_2001,%TODO: convert to thesis
+@thesis{grasedyck_theorie_2001,
 	title = {Theorie und Anwendungen Hierarchischer Matrizen},
 	abstract = {The modeling of physical properties often leads to the task of solving partial differential equations or integral equations. The results of some discretisation and linearisation process are matrix equations or linear systems of equations with special features. In the case of partial differential equations one exploits the local character of the differentiation by using some finite element method or finite difference scheme and gains a sparse system matrix. In the case of (nonlocal) integral operators low rank approximations seem to be the method of choice. These are either given explicitly by some multipole method or panel clustering technique or implicitly by rank revealing decompositions. Both types of matrices can be represented as so-called H-matrices. In this thesis we investigate algorithms that perform the addition, multiplication and inversion of H-matrices approximately. Under moderate assumptions the complexity of these new arithmetics is almost linear (linear up to logarithmic terms of order 1 to 3). The arithmetic operations can be performed adaptively, that is up to some given accuracy epsilon the relative error of the operations is zero. The question arises under which circumstances the inverse of an H-matrix can be approximated by an H-matrix. For the techniques used in this thesis we need very restrictive assumptions, but the numerical examples in the last part indicate that the approximability does not depend on these assumptions.},
+	institution = {Christian-Albrechts-Universität zu Kiel},
+	type = {phdthesis},
 	author = {Grasedyck, Lars},
 	date = {2001-08-27},
 	langid = {german},
@@ -387,9 +389,9 @@
 	file = {Eingereichte Version:/home/stephan/snap/zotero-snap/common/Zotero/storage/N6HLAF8X/Li et al. - 2015 - Butterfly Factorization.pdf:application/pdf},
 }
 
-@report{parker_random_1995,%TODO full url
+@report{parker_random_1995,
 	title = {Random Butterfly Transformations with Applications in Computational Linear Algebra},
-	url = {http://web.cs.ucla.edu/~stott/},
+	url = {http://web.cs.ucla.edu/~stott/ge/CSD-950023.pdf},
 	abstract = {Theory and practice of computational linear algebra differ over the issue of degeneracy. Block matrix decompositions are used heavily in theory, but less in practice, since even when a matrix is nondegenerate (has full rank) its block submatrices can be degenerate. The potential degeneracy of block submatrices can completely prevent practical use of block matrix algorithms. Gaussian elimination is an important example of an algorithm affected by the possibility of degeneracy. While the basic elimination procedure is simple to state and implement, it becomes more complicated with the addition of a pivoting procedure, which handles degenerate matrices having zeros on the diagonal. Pivoting can significantly complicate the algorithm, increase data movement, and reduce speed, particularly on high-performance computers. We propose a randomization scheme that preconditions an input matrix by multiplying it with random matrices, where this multiplication can be performed efficiently. At the e...},
 	author = {Parker, D. Stott},
 	date = {1995},
@@ -444,12 +446,13 @@
 	file = {Jaderberg et al. - 2014 - Speeding up Convolutional Neural Networks with Low.pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/82EBBFY4/Jaderberg et al. - 2014 - Speeding up Convolutional Neural Networks with Low.pdf:application/pdf;paper073.pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/7SAHQC2J/paper073.pdf:application/pdf},
 }
 
-@inproceedings{ioannou_training_2016,%TODO journal
+@inproceedings{ioannou_training_2016,
 	title = {Training {CNNs} with Low-Rank Filters for Efficient Image Classification},
 	doi = {10.13140/RG.2.1.3727.8163},
 	abstract = {Published as a conference paper at {ICLR} 2016 Trained Models at http://dx.doi.org/10.5281/zenodo.53189},
 	author = {Ioannou, Yani and Robertson, Duncan and Shotton, Jamie and Cipolla, Roberto and Criminisi, Antonio},
 	date = {2016-05-02},
+	eventtitle = {International Conference on Learning Representations},
 	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/HJPXHIUB/Ioannou et al. - 2016 - Training CNNs with Low-Rank Filters for Efficient .pdf:application/pdf},
 }
 
